@@ -1,7 +1,6 @@
 package com.universidad_nur.notasnurv3_api.services;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import com.universidad_nur.notasnurv3_api.entities.RecordStatus;
 
 import com.universidad_nur.notasnurv3_api.dto.SubjectRequest;
@@ -13,34 +12,44 @@ import com.universidad_nur.notasnurv3_api.entities.Semester;
 import com.universidad_nur.notasnurv3_api.repositories.SubjectRepository;
 import com.universidad_nur.notasnurv3_api.repositories.UserRepository;
 import com.universidad_nur.notasnurv3_api.repositories.SemesterRepository;
-
+import com.universidad_nur.notasnurv3_api.exceptions.InvalidOperationException;
+import com.universidad_nur.notasnurv3_api.exceptions.ResourceNotFoundException;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Lazy;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class SubjectService {
 
     private final SubjectRepository subjectRepository;
     private final UserRepository userRepository;
     private final SemesterRepository semesterRepository;
+    private final GradingService gradingService;
+
+    @Autowired
+    @Lazy
+    private SubjectService self;
 
     @Transactional
     public SubjectResponse createSubject(SubjectRequest request) {
         if (request.getCapacity() == null || request.getCapacity() <= 0) {
-            throw new RuntimeException("La capacidad de la materia debe ser mayor a 0.");
+            throw new InvalidOperationException("La capacidad de la materia debe ser mayor a 0.");
         }
 
         Users teacher = userRepository.findById(request.getTeacherId())
-                .orElseThrow(() -> new RuntimeException("El usuario con ID " + request.getTeacherId() + " no existe."));
+                .orElseThrow(() -> new ResourceNotFoundException("El usuario con ID " + request.getTeacherId() + " no existe."));
 
         if (teacher.getRole() != Role.TEACHER) {
-            throw new RuntimeException("El usuario asignado no tiene permisos de docente.");
+            throw new InvalidOperationException("El usuario asignado no tiene permisos de docente.");
         }
 
         Semester semester = semesterRepository.findById(request.getSemesterId())
-                .orElseThrow(() -> new RuntimeException("El semestre seleccionado no existe."));
+                .orElseThrow(() -> new ResourceNotFoundException("El semestre seleccionado no existe."));
 
         Subject.SubjectBuilder subjectBuilder = Subject.builder()
                 .code(request.getCode())
@@ -48,7 +57,8 @@ public class SubjectService {
                 .capacity(request.getCapacity())
                 .recordStatus(RecordStatus.DRAFT)
                 .semester(semester)
-                .teacher(teacher);
+                .teacher(teacher)
+                .category(request.getCategory());
 
         if (request.getModality() != null) {
             subjectBuilder.modality(request.getModality());
@@ -63,30 +73,31 @@ public class SubjectService {
     public List<SubjectResponse> getAllSubjects() {
         return subjectRepository.findAll().stream()
                 .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public SubjectResponse getSubjectById(Integer id) {
         Subject subject = subjectRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Materia no encontrada con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Materia no encontrada con ID: " + id));
         return mapToResponseDTO(subject);
     }
 
     @Transactional
     public SubjectResponse updateSubject(Integer id, SubjectRequest request) {
         Subject subject = subjectRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("No se puede actualizar: Materia no encontrada."));
+                .orElseThrow(() -> new ResourceNotFoundException("No se puede actualizar: Materia no encontrada."));
 
         subject.setName(request.getName());
         if (request.getModality() != null) {
             subject.setModality(request.getModality());
         }
         subject.setCapacity(request.getCapacity());
+        subject.setCategory(request.getCategory());
 
         if (request.getSemesterId() != null) {
             Semester semester = semesterRepository.findById(request.getSemesterId())
-                    .orElseThrow(() -> new RuntimeException("Semestre no encontrado."));
+                    .orElseThrow(() -> new ResourceNotFoundException("Semestre no encontrado."));
             subject.setSemester(semester);
         }
 
@@ -96,7 +107,7 @@ public class SubjectService {
     @Transactional
     public void deleteSubject(Integer id) {
         if (!subjectRepository.existsById(id)) {
-            throw new RuntimeException("No se puede eliminar: Materia no encontrada.");
+            throw new ResourceNotFoundException("No se puede eliminar: Materia no encontrada.");
         }
         subjectRepository.deleteById(id);
     }
@@ -104,17 +115,43 @@ public class SubjectService {
     @Transactional
     public SubjectResponse activateSubject(Integer id) {
         subjectRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Materia no encontrada"));
+                .orElseThrow(() -> new ResourceNotFoundException("Materia no encontrada"));
         try {
             subjectRepository.activateSubject(id);
         } catch (Exception e) {
-            throw new RuntimeException("Error de validación: Las ponderaciones deben sumar exactamente 100 para activar.");
+            throw new InvalidOperationException("Error de validación: Las ponderaciones deben sumar exactamente 100 para activar.");
         }
         Subject activatedSubject = subjectRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Materia no encontrada después de activar"));
+                .orElseThrow(() -> new ResourceNotFoundException("Materia no encontrada después de activar"));
         return mapToResponseDTO(activatedSubject);
     }
 
+    @Transactional
+    public SubjectResponse closeSubject(Integer id) {
+        Subject subject = subjectRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Materia no encontrada."));
+
+        gradingService.calculateFinalGradesForSubject(id);
+
+        subject.setRecordStatus(RecordStatus.CLOSED);
+        subjectRepository.save(subject);
+
+        // Generar un log definitivo del acta
+        log.info("Log de Acta Definitiva: Materia ID {} ({}) ha sido CERRADA.", id, subject.getName());
+
+        return mapToResponseDTO(subject);
+    }
+
+    @Transactional
+    public void closeSubjectsBySemester(Integer semesterId) {
+        List<Subject> subjects = subjectRepository.findAll().stream()
+                .filter(s -> s.getSemester().getId().equals(semesterId) && s.getRecordStatus() != RecordStatus.CLOSED)
+                .toList();
+
+        for (Subject subject : subjects) {
+            self.closeSubject(subject.getId());
+        }
+    }
 
     private SubjectResponse mapToResponseDTO(Subject subject) {
         return SubjectResponse.builder()
@@ -129,6 +166,7 @@ public class SubjectService {
                 .teacherId(subject.getTeacher().getId())
                 .teacherName(subject.getTeacher().getFullName())
                 .management(String.valueOf(subject.getSemester().getManagement().getYear()))
+                .category(subject.getCategory())
                 .build();
     }
 }
